deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginxhello
  name: nginxhello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginxhello
  template:
    metadata:
      labels:
        app: nginxhello
    spec:
      containers:
      - image: docker.io/nbrown/nginxhello:1.19.0
        name: nginxhello
        ports:
        - containerPort: 80
        livenessProbe:
          initialDelaySeconds: 2
          periodSeconds: 2
          httpGet:
            port: 80
            path: /healthz/live
        readinessProbe:
          initialDelaySeconds: 2
          periodSeconds: 2
          httpGet:
            port: 80
            path: /healthz/ready
