deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: nginxhello
  name: single-default-backend-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - vm.comeonomon.ru
      secretName: example-app-tls
  defaultBackend:
    service:
      name: nginxhello
      port:
        number: 80
